# coin-monitor

./: .gitignore  Cargo.toml  README.md  config.toml  example.env
.github/workflows/: monitor.yml  test.yml
src/: main.rs
src/blockchain/: mod.rs  node_provider.rs
src/connectors/: mexc_connector.rs  mod.rs  okx_connector.rs
src/exchanges/: dto.rs  mod.rs  number_utils.rs  signer.rs
src/exchanges/hashkey/: actor.rs  connector.rs  dto.rs  mod.rs
src/exchanges/mexc/: actor.rs  connector.rs  dto.rs  mod.rs
src/exchanges/okx/: actor.rs  connector.rs  dto.rs
src/monitors/: mod.rs  monitor_address.rs  monitor_cex.rs  monitor_ip.rs
src/unittest/: actor_test.rs  mod.rs
src/utils/: config_struct.rs  error.rs  http_client.rs  messenger.rs  mod.rs  number_utils.rs
