[package]
name = "coin-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-file = "0.2.3"
dotenv = "0.15"
ethers = "2.0.11"
eyre = "0.6.10"
futures = "0.3"
http = "0.2.9"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1", features = ["full"] }

# signature
base64 = "0.13.1"
hmac = "0.12.1"
sha2 = "0.10.6"
