[package]
name = "coin-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-file = "0.2.3"
dotenv = "0.15"
ethers = "2.0.13"
eyre = "0.6.11"
futures = "0.3.30"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.196"
serde_json = "1.0.113"
thiserror = "1.0.56"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["full"] }
tuple-conv = "1.0.1"

# signature
base64 = "0.21.7"
hmac = "0.12.1"
sha2 = "0.10.8"

[dev-dependencies]
mockall = "0.12.1"
